# Tengine_Tutorial

./: README.md
0_Compile/: Compile_Android.md  Compile_X86.md  compile_tengine_android.sh  compile_tengine_x86.sh
1_Convert/: Convert_tmfile.md  convert_facedetect_onnx_2_tmfile.sh
2_FaceDetector/: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
2_FaceDetector/models/: version-RFB-320_simplified.tmfile
2_FaceDetector/src/: UltraFace.cpp  UltraFace.hpp  main.cpp
3_FaceDetector_Android/: README.md
3_FaceDetector_Android/Andorid/: .gitignore
3_FaceDetector_Android/Andorid/app/: .gitignore
3_FaceDetector_Android/Andorid/app/src/main/cpp/: CMakeLists.txt
3_FaceDetector_Android/Andorid/app/src/main/java/com/facesdk/: FaceDetector.java
3_FaceDetector_Android/Andorid/app/src/main/java/com/facesdk/activity/: ClassifierActivity.java
3_FaceDetector_Android/Andorid/app/src/main/java/com/facesdk/utils/: BitmapUtils.java  FaceUtils.java  ImageUtils.java  (+2 more)
3_FaceDetector_Android/Android/app/: build.gradle
3_FaceDetector_Android/Android/app/src/main/: AndroidManifest.xml
3_FaceDetector_Android/Android/app/src/main/cpp/: AndroidLog.h  FaceDetector.cpp
3_FaceDetector_Android/Android/app/src/main/java/com/facesdk/: FaceInfo.java
4_FaceDetector_Android_Camera/: README.md
4_FaceDetector_Android_Camera/Andorid/: .gitignore
4_FaceDetector_Android_Camera/Andorid/app/: build.gradle
4_FaceDetector_Android_Camera/Andorid/app/src/main/: AndroidManifest.xml
4_FaceDetector_Android_Camera/Andorid/app/src/main/java/com/facesdk/: FaceDetector.java
4_FaceDetector_Android_Camera/Andorid/app/src/main/res/layout/: camera_connection_fragment.xml
(+15 files in other folders)
